// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewProduct Component renders NewProduct component 1`] = `
<DocumentFragment>
  <div>
    <nav>
      <ul
        class="admin-menu"
      >
        <li>
          <a
            href="/admin"
          >
            Home
          </a>
        </li>
        <li>
          <a
            href="/admin/orders"
          >
            Order
          </a>
        </li>
        <li>
          <a
            href="/admin/products"
          >
            Products
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="css-1q7njkh"
    >
      <p
        class="chakra-text css-0"
        fontsize="2xl"
      >
        Edit
      </p>
      <div
        class="css-0"
      >
        <div
          class="css-lgjuw7"
        >
          <form>
            <div
              class="chakra-form-control css-0"
              role="group"
            >
              <label
                class="chakra-form__label css-uvho5g"
                for="field-:r0:"
                id="field-:r0:-label"
              >
                Title
              </label>
              <input
                class="chakra-input css-0"
                id="field-:r0:"
                name="title"
                value=""
              />
            </div>
            <div
              class="chakra-form-control css-1fhgjcy"
              role="group"
            >
              <label
                class="chakra-form__label css-uvho5g"
                for="field-:r1:"
                id="field-:r1:-label"
              >
                Description
              </label>
              <textarea
                class="chakra-textarea css-0"
                id="field-:r1:"
                name="description"
              />
            </div>
            <div
              class="chakra-form-control css-1fhgjcy"
              role="group"
            >
              <label
                class="chakra-form__label css-uvho5g"
                for="field-:r2:"
                id="field-:r2:-label"
              >
                Price
              </label>
              <input
                class="chakra-input css-0"
                id="field-:r2:"
                name="price"
                value=""
              />
            </div>
            <div
              class="chakra-form-control css-1fhgjcy"
              role="group"
            >
              <label
                class="chakra-form__label css-uvho5g"
                for="field-:r3:"
                id="field-:r3:-label"
              >
                Quantity
              </label>
              <div
                class="chakra-stack css-1igwmid"
              >
                <button
                  class="chakra-button css-4xx2wk"
                  type="button"
                >
                  -
                </button>
                <input
                  class="chakra-input css-1t1yipo"
                  id="field-:r3:"
                  name="quantity"
                  value="1"
                />
                <button
                  class="chakra-button css-4xx2wk"
                  type="button"
                >
                  +
                </button>
              </div>
            </div>
            <div
              class="chakra-form-control css-1fhgjcy"
              role="group"
            >
              <label
                class="chakra-form__label css-uvho5g"
                for="field-:r4:"
                id="field-:r4:-label"
              >
                Photos
              </label>
              <div>
                <button
                  class="chakra-button css-10tmkll"
                  type="button"
                >
                  Add a Photo
                </button>
              </div>
            </div>
            <button
              class="chakra-button css-2cxz8l"
              type="submit"
            >
              Add Product
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NewProduct Component renders navigation links 1`] = `
<DocumentFragment>
  <div>
    <nav>
      <ul
        class="admin-menu"
      >
        <li>
          <a
            href="/admin"
          >
            Home
          </a>
        </li>
        <li>
          <a
            href="/admin/orders"
          >
            Order
          </a>
        </li>
        <li>
          <a
            href="/admin/products"
          >
            Products
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="css-1q7njkh"
    >
      <p
        class="chakra-text css-0"
        fontsize="2xl"
      >
        Edit
      </p>
      <div
        class="css-0"
      >
        <div
          class="css-lgjuw7"
        >
          <form>
            <div
              class="chakra-form-control css-0"
              role="group"
            >
              <label
                class="chakra-form__label css-uvho5g"
                for="field-:r5:"
                id="field-:r5:-label"
              >
                Title
              </label>
              <input
                class="chakra-input css-0"
                id="field-:r5:"
                name="title"
                value=""
              />
            </div>
            <div
              class="chakra-form-control css-1fhgjcy"
              role="group"
            >
              <label
                class="chakra-form__label css-uvho5g"
                for="field-:r6:"
                id="field-:r6:-label"
              >
                Description
              </label>
              <textarea
                class="chakra-textarea css-0"
                id="field-:r6:"
                name="description"
              />
            </div>
            <div
              class="chakra-form-control css-1fhgjcy"
              role="group"
            >
              <label
                class="chakra-form__label css-uvho5g"
                for="field-:r7:"
                id="field-:r7:-label"
              >
                Price
              </label>
              <input
                class="chakra-input css-0"
                id="field-:r7:"
                name="price"
                value=""
              />
            </div>
            <div
              class="chakra-form-control css-1fhgjcy"
              role="group"
            >
              <label
                class="chakra-form__label css-uvho5g"
                for="field-:r8:"
                id="field-:r8:-label"
              >
                Quantity
              </label>
              <div
                class="chakra-stack css-1igwmid"
              >
                <button
                  class="chakra-button css-4xx2wk"
                  type="button"
                >
                  -
                </button>
                <input
                  class="chakra-input css-1t1yipo"
                  id="field-:r8:"
                  name="quantity"
                  value="1"
                />
                <button
                  class="chakra-button css-4xx2wk"
                  type="button"
                >
                  +
                </button>
              </div>
            </div>
            <div
              class="chakra-form-control css-1fhgjcy"
              role="group"
            >
              <label
                class="chakra-form__label css-uvho5g"
                for="field-:r9:"
                id="field-:r9:-label"
              >
                Photos
              </label>
              <div>
                <button
                  class="chakra-button css-10tmkll"
                  type="button"
                >
                  Add a Photo
                </button>
              </div>
            </div>
            <button
              class="chakra-button css-2cxz8l"
              type="submit"
            >
              Add Product
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
